infra/kustomize/gateway/gateways.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: shared-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        options:
          networking.gke.io/cert-manager-certs: cmp9785-rootcert
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
  addresses:
    - type: NamedAddress
      value: cmp9785-gateway-ip
