infra/kustomize/gateway/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: web-front-gateway
  namespace: web-front
  labels:
    gateway: shared-gateway
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
  hostnames:
    - "cmp9785.vuchuc789.co.uk"
  rules:
    - backendRefs:
        - name: web-front-generic-app
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: web-api-gateway
  namespace: web-api
  labels:
    gateway: shared-gateway
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
  hostnames:
    - "api.cmp9785.vuchuc789.co.uk"
  rules:
    - backendRefs:
        - name: web-api-generic-app
          port: 8000
